--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
     display: flex;
     align-items: center;
     text-align: center;
-    border: 2px solid green;
     margin: 20px auto;
     gap: 20px;
     
@@ -32,12 +31,15 @@
 
 .box1:hover{
     background-color: bisque;
+    border-radius: 15px;
 }
 .box2:hover{
     background-color: bisque;
+    border-radius: 15px;
 }
 .box3:hover{
     background-color: bisque;
+    border-radius: 15px;
 }
 .btn{
     display: inline-block; 
